hover en página shootings terminado

--- a/SCSS/_shootings.scss
+++ b/SCSS/_shootings.scss
@@ -9,6 +9,8 @@
     .grid-item{
         background-size: cover;
         background-position: center;
+        opacity:0.8;
+        transition: 1s ease;
         .btn{
             background-size: cover;
             background-position: center;
@@ -18,6 +20,10 @@
             width: 100%;
             height: 100%;
         }
+    }
+    .grid-item:hover{
+        opacity:1;
+        transition: 1s ease;
     }
     .item01{
         .btn01{
