--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -135,6 +135,8 @@ footer .socialMedia .social:hover {
 .grid .grid-item {
   background-size: cover;
   background-position: center;
+  opacity: 0.8;
+  transition: 1s ease;
 }
 .grid .grid-item .btn {
   background-size: cover;
@@ -144,6 +146,10 @@ footer .socialMedia .social:hover {
 .grid .grid-item .gridImg {
   width: 100%;
   height: 100%;
+}
+.grid .grid-item:hover {
+  opacity: 1;
+  transition: 1s ease;
 }
 .grid .item01 .btn01 {
   background-image: url(../assets/shoot04.jpg);
