--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -83,10 +83,10 @@ footer .socialMedia .social:hover {
   background-image: url(../assets/lala.jpg);
   background-size: cover;
   background-position: bottom;
-  height: 600px;
+  height: 700px;
 }
 .imgIndex main {
-  margin-top: 300px;
+  margin-top: 350px;
 }
 .imgIndex main marquee a {
   font-family: "Montserrat", sans-serif;
@@ -135,21 +135,20 @@ footer .socialMedia .social:hover {
 .grid .grid-item {
   background-size: cover;
   background-position: center;
-  opacity: 0.8;
-  transition: 1s ease;
 }
 .grid .grid-item .btn {
   background-size: cover;
   background-position: center;
   border: none;
+  transition: 1s ease;
+}
+.grid .grid-item .btn:hover {
+  opacity: 0.7;
+  transition: 1s ease;
 }
 .grid .grid-item .gridImg {
   width: 100%;
   height: 100%;
-}
-.grid .grid-item:hover {
-  opacity: 1;
-  transition: 1s ease;
 }
 .grid .item01 .btn01 {
   background-image: url(../assets/shoot04.jpg);
