--- a/SCSS/_shootings.scss
+++ b/SCSS/_shootings.scss
@@ -9,21 +9,20 @@
     .grid-item{
         background-size: cover;
         background-position: center;
-        opacity:0.8;
-        transition: 1s ease;
         .btn{
             background-size: cover;
             background-position: center;
             border: none;
+            transition: 1s ease;
+        }
+        .btn:hover{
+            opacity: 0.7;
+            transition: 1s ease;
         }
         .gridImg{
             width: 100%;
             height: 100%;
         }
-    }
-    .grid-item:hover{
-        opacity:1;
-        transition: 1s ease;
     }
     .item01{
         .btn01{
