--- a/SCSS/_shootings.scss
+++ b/SCSS/_shootings.scss
@@ -7,6 +7,7 @@
     gap:10px;
     margin-top: 10px;
     .grid-item{
+        backgroud-color: $color2;
         background-size: cover;
         background-position: center;
         .btn{
