--- a/SCSS/_shootings.scss
+++ b/SCSS/_shootings.scss
@@ -10,6 +10,7 @@
         background-size: cover;
         background-position: center;
         .btn{
+            background-color: transparent;
             background-size: cover;
             background-position: center;
             border: none;
